--- a/Styles/style.css
+++ b/Styles/style.css
@@ -5,16 +5,16 @@ body {
 }
 
 h1 {
-  color: darkred;
+  color: #e82b2b;
   font-weight: 700;
   font-size: 45px;
 }
 
-h2 {
+/* h2 {
   color: darkgoldenrod;
   font-weight: 700;
-  font-size: 22px;
-}
+  font-size: 22px; 
+}*/
 
 h3 {
   color: black;
@@ -35,28 +35,59 @@ p {
   background: #ffffff;
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
+/*---Main---*/
+.h-main {
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+  font-size: 22px;
+}
+.ol-main {
+  color: black;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+}
+.ol-main-item {
+  color: gray;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
 
+/*Main desc*/
 .main-desc {
-  margin: 0px 0px 0px 0px;
-  padding: 0px 8px 0px 88px;
+  margin-left: 88px;
   width: 400px;
 }
 
+/*Projects*/
 .projects {
-  padding: 0px 8px 0px 88px;
+  margin-left: 88px;
+  margin-top: 40px;
 }
 
+/*Expirence*/
 .expirence {
   width: 655px;
-  padding: 0px 8px 8px 88px;
+  margin-left: 88px;
+  margin-top: 20px;
+}
+.exp-loc {
+  color: #e82b2b;
+}
+.exp-time {
+  font-size: 12px;
+  color: rgb(116, 116, 116);
 }
 
+/*Edu*/
 .education {
   width: 242px;
-  padding: 0px 0px 0px 88px;
-  margin: 0px 0px 0px 0px;
+  margin-left: 88px;
+  margin-top: 43px;
 }
 
+/*---Side bar---*/
 .aside {
   background: #1e2939;
   width: 370px;
@@ -64,36 +95,76 @@ p {
   color: white;
 }
 
+/*Contact*/
 .contact {
   position: relative;
-  padding: 0px 40px 0px 40px;
-  top: 40px;
+  margin-top: 51px;
+  margin-left: 40px;
+}
+.contact-type {
+  font-family: 'Montserrat';
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+}
+.contact-line {
+  font-family: 'Montserrat';
+  color: gray;
+  margin: 0px, 5px;
+  font-size: 14px;
+  line-height: 24px;
 }
 
+/*Tech skills*/
 .tech {
   position: relative;
-  padding: 0px 40px 0px 40px;
-  top: 40px;
+  margin-top: 47px;
+  margin-left: 40px;
+}
+.ul-side-tech {
+  font-family: 'Montserrat';
+  color: #e82b2b;
+  font-style: normal;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  margin-left: 0px;
+  padding-left: 0px;
+  list-style-position: inside;
 }
 
+/*Soft skills*/
 .soft {
   position: relative;
-  padding: 0px 40px 0px 40px;
-  top: 40px;
+  margin-top: 44px;
+  margin-left: 40px;
 }
 
-#exp-loc {
-  color: darkred;
+.ul-side-soft {
+  color: #e82b2b;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  margin-left: 0px;
+  padding-left: 0px;
+  list-style-position: inside;
 }
 
+.h-sec {
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.li-side {
+  color: #ffffff;
+}
+
+/*single element styles*/
 #p-photo {
   width: 370px;
   height: 354px;
   position: relative;
-  top: 40px;
-}
-
-#exp-time {
-  font-size: 12px;
-  color: rgb(116, 116, 116);
+  margin-top: 40px;
 }
