--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,7 @@
+main {
+  padding: 98px 88px 98px 88px;
+}
+
 body {
   font-family: 'Montserrat';
   background: #e5e5e5;
@@ -36,13 +40,17 @@ p {
   box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 }
 /*---Main---*/
+
 .h-main {
   color: rgb(0, 0, 0);
+
   font-weight: 700;
   font-size: 22px;
 }
 .ol-main {
   color: black;
+  padding-left: 20px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
@@ -54,45 +62,75 @@ p {
   line-height: 24px;
 }
 
+.ul-main {
+  width: 509px;
+  padding-left: 20px;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+
+}
+
 /*Main desc*/
 .main-desc {
-  margin-left: 88px;
-  width: 400px;
+  width: 420px;
+  margin-bottom: 40px;
 }
 
 /*Projects*/
 .projects {
-  margin-left: 88px;
-  margin-top: 40px;
+  width: 485px;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
+.projects-link {
+  color: gray;
+  text-decoration: none;
+}
+.projects-bracket {
+  color: #000000;
+  font-weight: 700;
 }
 
 /*Expirence*/
-.expirence {
-  width: 655px;
-  margin-left: 88px;
-  margin-top: 20px;
+.expirience {
+  width: 525px;
+  margin-top: 67px;
+}
+
+.expirence-item {
+  width: 525px;
 }
 .exp-loc {
   color: #e82b2b;
 }
 .exp-time {
-  font-size: 12px;
   color: rgb(116, 116, 116);
+
+  font-size: 12px;
 }
 
 /*Edu*/
 .education {
   width: 242px;
-  margin-left: 88px;
   margin-top: 43px;
 }
-
+.education-type {
+  color: #e82b2b;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+}
 /*---Side bar---*/
 .aside {
   background: #1e2939;
-  width: 370px;
-  height: 1319px;
   color: white;
+
+  width: 370px;
+  height: 1605px;
 }
 
 /*Contact*/
@@ -102,15 +140,17 @@ p {
   margin-left: 40px;
 }
 .contact-type {
-  font-family: 'Montserrat';
   color: white;
+
+  font-family: 'Montserrat';
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
 }
 .contact-line {
-  font-family: 'Montserrat';
   color: gray;
+
+  font-family: 'Montserrat';
   margin: 0px, 5px;
   font-size: 14px;
   line-height: 24px;
@@ -167,4 +207,10 @@ p {
   height: 354px;
   position: relative;
   margin-top: 40px;
+}
+#title {
+  color: #000000;
+  font-size: 14px;
+  line-height: 17px;
+  margin-bottom: -10px;
 }
